--- a/scripts/common.css
+++ b/scripts/common.css
@@ -221,3 +221,10 @@ a.menu2:hover
   margin-bottom: 60px;
   width: 100%;
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -150px;
+    visibility: hidden;
+}
